<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="icynote.ui.fragments.NotesList">

    <include layout="@layout/menu_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/searchBar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/loading"
                android:visibility="visible"
                android:enabled="false"
                android:imeOptions="actionDone"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/notes_list_empty_text"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/lvNotes"
                android:layout_weight="1" />

        <!-- </RelativeLayout> -->

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/notes_list_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btAdd"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:enabled="false"
                android:layout_toEndOf="@+id/tvNumNotes"
                android:layout_toRightOf="@+id/tvNumNotes" />

            <TextView
                android:id="@+id/tvNumNotes"
                android:text="@string/loading"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:text="@string/notes_list_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btDelete"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_toLeftOf="@+id/tvNumNotes"
                android:layout_toStartOf="@+id/tvNumNotes"
                android:enabled="false"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
