<resources>
    <string name="app_name">Icy Note</string>

    <string name="noteDisplayTitleHint">enter title…</string>
    <string name="noteDisplayTextHint">enter text…</string>

    <string name="listAllNotes">List all Notes</string>
    <string name="openLastNote">Reopen last note</string>
    <string name="editTags">Edit tags</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>

    <string name="menuButtonImage">Menu button image</string>
    <string name="menuOpenMetadata">Metadata button image</string>
    <string name="menuRefresh">Refresh button image</string>
    <string name="menuBack">Back button image</string>

    <string name="label_email_password">Email/Password</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="loading">Loading…</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_icynote_lockup">Icynote logo and name</string>

    <string name="email_password_title_text">Email and Password</string>

    <string-array name="sort_by">
        <item>Title</item>
        <item>Created</item>
        <item>Last modified</item>
    </string-array>

    <string-array name="sort_by_values">
        <item>TITLE</item>
        <item>CREATION</item>
        <item>LAST_MOD</item>
    </string-array>

    <string-array name="sort_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="sort_order_values">
        <item>ASC</item>
        <item>DSC</item>
    </string-array>

    <!---->

    <string name="activity_chooser_local_sign_in">Local Sign In</string>
    <string name="activity_chooser_google_sign_in">Google Sign In</string>

    <string name="edit_tags_not_implemented_yet">NOT IMPLEMENTED YET</string>

    <string name="notes_list_context_menu_item_delete">Delete</string>
    <string name="notes_list_context_menu_item_return">Return</string>

    <string name="notes_list_add">Add</string>
    <string name="notes_list_empty_text">To start click on ADD in the bottom right corner</string>
    <string name="notes_list_delete">Delete selected</string>

    <string name="trashed_note_empty_text">You don\'t have any trashed note.</string>
    <string name="trashed_note_restore">Restore selected</string>

    <string name="item_note_title">Title</string>
    <string name="item_note_date">Date</string>
    <string name="item_note_content">Content</string>

    <string name="error_main_activity_unable_to_create_new_holder">Sorry, unable to create a new holder for your note</string>
    <string name="error_main_activity_unable_to_persist_note">Unexpected error: unable to persist the note</string>
    <string name="error_main_activity_unable_to_save_note">"Unexpected error: unable to save the note "</string>
    <string name="error_main_activity_unable_to_delete_note">Sorry, unable to delete note</string>
    <string name="error_main_activity_no_last_opened_note">There is no last opened note.</string>

    <string name="extra_user_uid">userUID</string>
    <string name="extra_anonymous_user_id">anonymousUserId</string>

    <string name="error_notes_adapter_no_item_found">"NotesAdapter: no item at position "</string>
    <string name="notes_adapter_date">"Last updated: "</string>

    <string name="error_email_password_login_email__required">Required.</string>
    <string name="error_email_password_login_password_required">Required.</string>
    <string name="success_email_password_login_local_sign_in">local sign in success</string>
    <string name="email_password_login_create_user_email">createUserWithEmail</string>
    <string name="email_password_login_sign_in_email">signInWithEmail</string>

    <string name="error_google_client_unable_to_connect">Google Play Services error: unable to connect. %s</string>

    <string name="success_google_link_credentials_put_extra">Success</string>
    <string name="extra_google_link_message">googleLink.message</string>

    <string name="error_google_sign_in">Google Sign In cancelled</string>
    <string name="success_google_sign_in">Google Sign In success</string>

    <string name="sign_out_account_closed">Account closed</string>

    <string name="trashed_note_search_bar_hint">Enter text to find</string>
    <plurals name="trashed_note_tv_num_note">
        <item quantity="one">%d note</item>
        <item quantity="other">%d notes</item>
    </plurals>

    <string name="notes_list_search_bar_hint">Enter text to find</string>
    <plurals name="notes_list_tv_num_note">
        <item quantity="one">%d note</item>
        <item quantity="other">%d notes</item>
    </plurals>

    <string name="metadata_note_date_created">"Date Created:  "</string>
    <string name="metadata_note_date_modified">"Date Modified:  "</string>
    <string name="metadata_note_date_format">dd/MM/yyyy</string>
    <string name="metadata_note_back_text">Back</string>
    <string name="metadata_note_plugins_title">Plugins</string>
    <string name="metadata_note_edit_title_title">Edit the Title</string>
    <string name="metadata_note_info_title">More Information</string>

    <string name="pic_edit_preview">Preview of the Photo</string>
    <string name="pic_edit_done">Finish modifications and submit image a Note</string>
    <string name="pic_edit_rotate_right">Rotate image clockwise</string>
    <string name="pic_edit_rotate_left">Rotate image counter-clockwise</string>

    <string name="error_edit_note_edit_note_contract_not_implemented">%s has to implement EditNote.Contract.</string>

</resources>
