...
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/ic_menu_slideshow"
        android:onClick="toggleMenu" />

    <EditText
        android:id="@+id/noteDisplayTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textAlignment="center"
        android:layout_gravity="end"
...
        android:onClick="openSettings"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/noteDisplayBodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="99"
        android:gravity="top|start"
...
