<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5sp"
    android:paddingRight="5sp">

    <CheckBox
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_marginRight="5sp"
        android:layout_marginEnd="5sp"
        android:paddingTop="5sp"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/item_content"
        android:descendantFocusability="blocksDescendants"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">
            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/item_note_title"
                android:textSize="@dimen/notesTitleSize"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.8"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_note_date" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_note_content" />

        <View style="@style/notesSeparator" />
    </LinearLayout>

</LinearLayout>